feat: add smelter and chemical plant
